--- a/css/main.css
+++ b/css/main.css
@@ -864,6 +864,11 @@ h3, h4 {
 .u-is-invisible {
     visibility: hidden
 }
+
+.facebook-container {
+    margin-top: 2rem;
+    text-align: right
+}
 .video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
 
 .video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
